--- a/SS_catalog/style.css
+++ b/SS_catalog/style.css
@@ -1,3 +1,14 @@
+body {
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+}
+
+img {
+  pointer-events: none;
+}
+
 /* Anule os estilos padrão do Bootstrap para os controles do carrossel */
 .carousel-control-prev,
 .carousel-control-next {
@@ -71,7 +82,11 @@
 }
 
 .navbar {
-  background-color: pink; /* Define a cor de fundo como rosa */
+  background-color: pink !important;
+}
+
+.navbar-logo {
+  max-height: 45px; /* Defina o tamanho máximo desejado para o logotipo */
 }
 
 .button-icon {
@@ -89,6 +104,20 @@
   text-align: center;
 }
 
+.custom-font {
+  font-family: 'Dancing Script', cursive;
+}
+
+.button-icon-pink {
+  background-color: pink !important;
+  color: white !important;
+  border: none;
+}
+
+.button-icon-pink:hover {
+  background-color: lightpink !important;
+}
+
 @media only screen and (max-width: 500px) {
   .content {
     display: none; /* Ocultar o conteúdo quando na orientação retrato */
@@ -96,6 +125,13 @@
   .landscape-warning {
     display: block; /* Mostrar o aviso em dispositivos móveis */
     text-align: center;
+  }
+  .centered-image {
+    display: flex;
+    flex-direction: column;
+    align-items: center; /* Centralize verticalmente o conteúdo dentro do elemento pai */
+    text-align: center; /* Centralize o texto horizontalmente */
+    height: 100%; /* Certifique-se de que o elemento pai tenha uma altura definida (por exemplo, 100% da altura da janela) */
   }
 }
 
