--- a/style.css
+++ b/style.css
@@ -25,6 +25,13 @@ img {
   transform: translateY(-50%) !important;
 }
 
+.carousel-control-prev i,
+.carousel-control-next i {
+    font-size: 30px !important;
+    color: white !important;
+    background-color: transparent !important;
+}
+
 .carousel-control-prev {
   left: -50px !important; /* Move a seta da esquerda mais para a esquerda */
 }
@@ -106,7 +113,7 @@ img {
 }
 
 .custom-font {
-  font-family: 'Dancing Script', cursive;
+  font-family: 'Montserrat', sans-serif;
 }
 
 .button-icon-pink {
@@ -119,24 +126,29 @@ img {
   background-color: lightpink !important;
 }
 
+/*
 @media only screen and (max-width: 500px) {
   .content {
-    display: none; /* Ocultar o conteúdo quando na orientação retrato */
+    display: none; 
   }
   .landscape-warning {
-    display: block; /* Mostrar o aviso em dispositivos móveis */
+    display: block; 
     text-align: center;
   }
   .centered-image {
     display: flex;
     flex-direction: column;
-    align-items: center; /* Centralize verticalmente o conteúdo dentro do elemento pai */
-    text-align: center; /* Centralize o texto horizontalmente */
-    height: 100%; /* Certifique-se de que o elemento pai tenha uma altura definida (por exemplo, 100% da altura da janela) */
+    align-items: center; 
+    text-align: center;
+    height: 100%; 
   }
-}
+}*/
 
 @media (max-width: 1024px) {
+
+  .navbar-brand#pageTracker {
+    display: none;
+  }
 
   .button-icon {
     font-size: 1rem; /* Tamanho menor para dispositivos menores */
@@ -150,13 +162,16 @@ img {
   /* Anule os estilos padrão do Bootstrap para os controles do carrossel para dispositivos móveis */
   .carousel-control-prev,
   .carousel-control-next {
-    width: 30px !important; /* Reduza o tamanho dos botões para dispositivos móveis */
-    height: 30px !important;
-    /* ... Outros estilos específicos para dispositivos móveis ... */
+    display: none !important;
+  }
+
+  .custom-button-prevTen i,
+  .custom-button-nextTen i {
+    display: none !important;
   }
 
   .carousel-container {
-    width: 80%; /* Ajuste a largura conforme necessário para dispositivos móveis */
+    width: 100%; /* Ajuste a largura conforme necessário para dispositivos móveis */
     /* ... Outros estilos específicos para dispositivos móveis ... */
   }
 
